# rcds

./: flake.nix  pyproject.toml
example/web/with-database/chall/: package-lock.json
rcds/backends/k8s/: backend.py  manifests.py
rcds/backends/k8s/templates/: deployment.yaml  ingressroute.yaml  ingressroutetcp.yaml  namespace.yaml  service.yaml
rcds/backends/rctf/: backend.py
rcds/challenge/: challenge.schema.yaml  config.py  docker.py
rcds/cli/: deploy.py
rcds/project/: rcds.schema.yaml
