[tool.poetry]
name = "rcds"
version = "0.1.4"
description = "An automated CTF challenge deployment tool"
readme = "README.rst"
authors = ["redpwn <contact@redpwn.net>"]
homepage = "https://rcds.redpwn.net"
repository = "https://github.com/redpwn/rCDS"
license = "BSD-3-Clause"
packages = [
    { include = "rcds" },
]

[tool.poetry.scripts]
rcds = "rcds.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
pathspec = "^0.12.1"
docker = "^7.0.0"
jsonschema = "^4.21.0"
Jinja2 = ">=2.11.2,<4.0.0"
kubernetes = "^29.0.0"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
click = "^8.1.7"

# Docs build dependencies
sphinx = { version = "^7.3.7", optional = true }
sphinx_rtd_theme = { version = "^2.0.0", optional = true }
sphinx-jsonschema = { version = "^1.15", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = { version = "^2.12.1", python = "^3.6.1" }
black = "^20.8b1"
pytest = "^6.2.3"
coverage = "^5.5"
mypy = "^0.812"
flake8 = "^3.9.0"
flake8-bugbear = "^21.4.3"
pytest-datadir = "^1.3.1"
isort = "^5.13.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-jsonschema"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.core.masonry.api"
